<resources>
    <string name="app_name">Notes</string>
    <string name="action_add_note">Add Note</string>
    <string name="text_view_title">Title:</string>
    <string name="edit_text_title">Title</string>
    <string name="text_view_description">Description:</string>
    <string name="edit_text_description">Description</string>
    <string name="button_delete_note">Delete</string>
    <string name="button_save_note">Save</string>
</resources>