<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_title" />

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_title"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_description" />

        <EditText
            android:id="@+id/edit_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_description"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_delete_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_delete_note" />

            <Button
                android:id="@+id/button_save_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save_note" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>